Update VariantConcordanceScore to exclude the input VCF from driving variants